--- a/TranslatorsLab3.vcxproj
+++ b/TranslatorsLab3.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -144,6 +144,8 @@
   <ItemGroup>
     <ClInclude Include="ConstTable.h" />
     <ClInclude Include="ConstTableRow.h" />
+    <ClInclude Include="LexicalAnalyzer.h" />
+    <ClInclude Include="SyntaxAnalyzer.h" />
     <ClInclude Include="VarTable.h" />
     <ClInclude Include="VarTableRow.h" />
   </ItemGroup>
