--- a/TranslatorsLab3.vcxproj.filters
+++ b/TranslatorsLab3.vcxproj.filters
@@ -32,6 +32,12 @@
     <ClInclude Include="VarTable.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="LexicalAnalyzer.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="SyntaxAnalyzer.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="tokens.txt">
