--- a/TranslatorsLab3.vcxproj.filters
+++ b/TranslatorsLab3.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="SyntaxAnalyzer.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="CodeGenerator.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="tokens.txt">
